[tool.poetry]
name = "pdfutil"
version = "0.1.0"
description = "This is my PDF toolkit"
authors = ["Charles Meruwoma <charles@cmstack.xyz>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pypdf2 = "^3.0.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdfutil = "pdfutil.main:hello"